@@ -11,8 +11,8 @@
 #include "Help.h"
 #include "Modules.h"
 #include "OutputFiles.h"
-#include "DataBases/CementSolutionChemistry.h"
-#include "DataBases/HardenedCementChemistry.h"
+#include "CementSolutionChemistry.h"
+#include "HardenedCementChemistry.h"
 #include "Models.h"
 #include "Bil.h"
 #include "Exception.h"
